--- a/equipe-muscle.html
+++ b/equipe-muscle.html
@@ -31,14 +31,13 @@
           <div class="rd-navbar-top-panel context-dark bg-danger">
             <div class="left-side">
               <address class="contact-info text-left"><a href="tel:#"><span
-                    class="icon mdi mdi-cellphone-android novi-icon"></span><span
-                    class="text-middle">041
+                    class="icon mdi mdi-cellphone-android novi-icon"></span><span class="text-middle">041
                     99845-1762</span></a></address>
             </div>
             <div class="center">
-              <addres><span
-                    class="icon mdi mdi-map-marker-radius novi-icon"></span><span class="text-middle">Curitiba-PR / Rio
-                      Bonito</span></a></address>
+              <addres><span class="icon mdi mdi-map-marker-radius novi-icon"></span><span
+                  class="text-middle">Curitiba-PR / Rio
+                  Bonito</span></a></address>
             </div>
             <div class="right-side">
               <ul class="list-inline list-inline-sm">
@@ -94,8 +93,12 @@
         </ul>
       </div>
     </div>
-</div>
-</section>
+    </div>
+  </section>
+  
+  <h1 class="text-darker">Equipe Muscle</h1>
+
+
   <!-- About-->
   <section class="section-98 section-md-110 novi-background"
     data-preset='{"title":"Content block 2","category":"content","reload":true,"id":"content-block-2"}'>
@@ -104,8 +107,8 @@
         <div class="col-sm-10 col-md-5">
           <!-- Member block type 5-->
           <div class="member-block-type-5 inset-lg-right-20"><img class="img-fluid mx-auto d-block"
-              src="images/user-emily-perkins-437x437.jpg" width="437" height="437" alt="" />
-            <div class="member-block-body"><a class="btn btn-block btn-danger" href="#contacts.html">Saiba Mais</a>
+              src="imgs-muscle/alan-perf.png" width="437" height="437" alt="" />
+            <div class="member-block-body"><a class="btn btn-block btn-danger" href="#">Whatsapp</a>
               <div class="offset-top-34">
                 <ul class="list-inline list-inline-xs">
                   <li class="list-inline-item"><a
@@ -120,8 +123,9 @@
               </div>
               <address class="contact-info offset-top-20 offset-md-top-34">
                 <ul class="list-unstyled p">
-                  <li><span class="novi-icon icon icon-xxs text-middle text-dark mdi mdi-phone"></span><a
-                      class="p big text-middle d-inline-block offset-top-0" href="tel:041 xxxxx-xxxx">041 xxxxx-xxxx</a>
+                  <li><span class="novi-icon icon icon-xxs text-middle text-dark mdi mdi-phone"></span>
+                    041 xxxxx-xxxx</a>
+                    <br><br>
                   </li>
                   <li><span class="novi-icon icon icon-xxs text-middle text-dark mdi mdi-email-open"></span><a
                       class="p big text-middle d-inline-block offset-top-0 text-picton-blue"
@@ -131,98 +135,95 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-10 col-md-5">
-          <!-- Member block type 5-->
-          <div class="member-block-type-5 inset-lg-right-20"><img class="img-fluid mx-auto d-block"
-              src="images/user-emily-perkins-437x437.jpg" width="437" height="437" alt="" />
-            <div class="member-block-body"><a class="btn btn-block btn-danger" href="#contacts.html">Saiba Mais</a>
-              <div class="offset-top-34">
-                <ul class="list-inline list-inline-xs">
-                  <li class="list-inline-item"><a
-                      class="novi-icon icon icon-xxs icon-circle icon-darkest-filled fa-facebook" href="#"></a></li>
-                  <li class="list-inline-item"><a
-                      class="novi-icon icon icon-xxs icon-circle icon-darkest-filled fa-twitter" href="#"></a></li>
-                  <li class="list-inline-item"><a
-                      class="novi-icon icon icon-xxs icon-circle icon-darkest-filled fa-google-plus" href="#"></a></li>
-                  <li class="list-inline-item"><a
-                      class="novi-icon icon icon-xxs icon-circle icon-darkest-filled fa-linkedin" href="#"></a></li>
-                </ul>
+      </div>
+      <!--Div linha horizontal -->
+      <div id="linha">
+      </div>
+
+      <div>
+      </div>
+
+      <hr />
+
+      <div>
+      </div>
+      <div class="container">
+        <div class="row justify-content-sm-center">
+          <div class="col-sm-10 col-md-5">
+            <!-- Member block type 5-->
+            <div class="member-block-type-5 inset-lg-right-20"><img class="img-fluid mx-auto d-block"
+                src="imgs-muscle/eduardo-perf.png" width="437" height="437" alt="" />
+              <div class="member-block-body"><a class="btn btn-block btn-danger" href="#">Whatsapp</a>
+                <div class="offset-top-34">
+                  <ul class="list-inline list-inline-xs">
+                    <li class="list-inline-item"><a
+                        class="novi-icon icon icon-xxs icon-circle icon-darkest-filled fa-facebook" href="#"></a></li>
+                    <li class="list-inline-item"><a
+                        class="novi-icon icon icon-xxs icon-circle icon-darkest-filled fa-twitter" href="#"></a></li>
+                    <li class="list-inline-item"><a
+                        class="novi-icon icon icon-xxs icon-circle icon-darkest-filled fa-google-plus" href="#"></a>
+                    </li>
+                    <li class="list-inline-item"><a
+                        class="novi-icon icon icon-xxs icon-circle icon-darkest-filled fa-linkedin" href="#"></a></li>
+                  </ul>
+                </div>
+                <address class="contact-info offset-top-20 offset-md-top-34">
+                  <ul class="list-unstyled p">
+                    <li><span class="novi-icon icon icon-xxs text-middle text-dark mdi mdi-phone"></span>
+                      041 xxxxx-xxxx</a>
+                    </li>
+                    <li><span class="novi-icon icon icon-xxs text-middle text-dark mdi mdi-email-open"></span><a
+                        class="p big text-middle d-inline-block offset-top-0 text-picton-blue"
+                        href="mailto:email@gmail.com">email@gmail.com</a></li>
+                  </ul>
+                </address>
               </div>
-              <address class="contact-info offset-top-20 offset-md-top-34">
-                <ul class="list-unstyled p">
-                  <li><span class="novi-icon icon icon-xxs text-middle text-dark mdi mdi-phone"></span><a
-                      class="p big text-middle d-inline-block offset-top-0" href="tel:041 xxxxx-xxxx">041 xxxxx-xxxx</a>
-                  </li>
-                  <li><span class="novi-icon icon icon-xxs text-middle text-dark mdi mdi-email-open"></span><a
-                      class="p big text-middle d-inline-block offset-top-0 text-picton-blue"
-                      href="mailto:email@gmail.com">email@gmail.com</a></li>
-                </ul>
-              </address>
             </div>
           </div>
         </div>
-        <div class="col-sm-10 col-md-7 text-md-left">
-          <div>
-            <h1 class="text-darker">Equipe Muscle</h1>
-          </div>
-          <p class="text-muted offset-top-4">{inserir texto}</p>
-          <hr class="divider bg-red hr-md-left-0">
-          <p class="offset-top-50 text-left">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident ullam modi aliquam ab ipsam doloribus atque fuga saepe iste beatae. <br><br> Similique ipsam fugiat sunt dolores consequatur cum minus incidunt quae.</p>
-          <div class="offset-top-30 text-center">
-            <p>
-              <q class="font-italic h3 text-regular">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi rem nostrum, illo molestias laboriosam quaerat dolore iste distinctio deserunt earum debitis. <br><br> Voluptatum in quas non aperiam, asperiores quibusdam eos aspernatur?</q>
-            </p>
-          </div>
-          <div class="offset-top-30">
-            <p class="text-left">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam iste sequi totam! Dolores quam officia id. <br><br> Iure dolore modi ipsam obcaecati alias autem aperiam neque molestias dolores, maxime officiis adipisci!
-            </p>
-          </div>
-          <div class="offset-top-50">
-            <!-- Linear progress bar-->
-            <div class="progress-linear" data-to="70">
-              <div class="progress-linear-header clearfix">
-                <div><span class="progress-linear-title p text-ubold pull-left text-uppercase">{Inserir texto}</span></div>
-                <div><span class="big text-ubold pull-right progress-linear-counter">70 ????</span></div>
-              </div>
-              <div class="progress-linear-body">
-                <div class="progress-linear-bar bg-success"></div>
-              </div>
-            </div>
-            <div class="offset-top-50">
-              <!-- Linear progress bar-->
-              <div class="progress-linear" data-to="54">
-                <div class="progress-linear-header clearfix">
-                  <div><span class="progress-linear-title p text-ubold pull-left text-uppercase">CrossFIT KKKKKKKKKKK</span></div>
-                  <div><span class="big text-ubold pull-right progress-linear-counter">54</span></div>
+      </div>
+
+
+      <!--Div linha horizontal -->
+      <div id="linha">
+      </div>
+      <hr />
+
+      <div class="container">
+        <div class="row justify-content-sm-center">
+          <div class="col-sm-10 col-md-5">
+            <!-- Member block type 5-->
+            <div class="member-block-type-5 inset-lg-right-20"><img class="img-fluid mx-auto d-block"
+                src="imgs-muscle/adriane-perf.png" width="437" height="437" alt="" />
+              <div class="member-block-body"><a class="btn btn-block btn-danger" href="#">Whatsapp</a>
+                <div class="offset-top-34">
+                  <ul class="list-inline list-inline-xs">
+                    <li class="list-inline-item"><a
+                        class="novi-icon icon icon-xxs icon-circle icon-darkest-filled fa-facebook" href="#"></a></li>
+                    <li class="list-inline-item"><a
+                        class="novi-icon icon icon-xxs icon-circle icon-darkest-filled fa-twitter" href="#"></a></li>
+                    <li class="list-inline-item"><a
+                        class="novi-icon icon icon-xxs icon-circle icon-darkest-filled fa-google-plus" href="#"></a>
+                    </li>
+                    <li class="list-inline-item"><a
+                        class="novi-icon icon icon-xxs icon-circle icon-darkest-filled fa-linkedin" href="#"></a></li>
+                  </ul>
                 </div>
-                <div class="progress-linear-body">
-                  <div class="progress-linear-bar bg-info"></div>
-                </div>
-              </div>
-            </div>
-            <div class="offset-top-50">
-              <!-- Linear progress bar-->
-              <div class="progress-linear" data-to="87">
-                <div class="progress-linear-header clearfix">
-                  <div><span class="progress-linear-title p text-ubold pull-left text-uppercase">YogaPUTAQUEPARIU</span></div>
-                  <div><span class="big text-ubold pull-right progress-linear-counter">87</span></div>
-                </div>
-                <div class="progress-linear-body">
-                  <div class="progress-linear-bar bg-warning"></div>
-                </div>
-              </div>
-            </div>
-            <div class="offset-top-50">
-              <!-- Linear progress bar-->
-              <div class="progress-linear" data-to="65">
-                <div class="progress-linear-header clearfix">
-                  <div><span class="progress-linear-title p text-ubold pull-left text-uppercase">BodybuildingBIIIIIRL</span>
-                  </div>
-                  <div><span class="big text-ubold pull-right progress-linear-counter">65</span></div>
-                </div>
-                <div class="progress-linear-body">
-                  <div class="progress-linear-bar bg-danger"></div>
-                </div>
+                <address class="contact-info offset-top-20 offset-md-top-34">
+                  <ul class="list-unstyled p">
+                    <li><span class="novi-icon icon icon-xxs text-middle text-dark mdi mdi-phone"></span>
+                      041 xxxxx-xxxx</a>
+                    </li>
+                    <li><span class="novi-icon icon icon-xxs text-middle text-dark mdi mdi-email-open"></span><a
+                        class="p big text-middle d-inline-block offset-top-0 text-picton-blue"
+                        href="mailto:email@gmail.com">email@gmail.com</a></li>
+
+                    <!--Div linha horizontal -->
+                    <div id="linha">
+                    </div>
+                    <hr />
+                  </ul>
+                </address>
               </div>
             </div>
           </div>
@@ -230,6 +231,85 @@
       </div>
     </div>
   </section>
+  <section>
+    <div>
+      <h1 class="text-darker">Equipe Muscle</h1>
+    </div>
+    <p class="text-muted offset-top-4">{inserir texto}</p>
+    <hr class="divider bg-red hr-md-left-0">
+    <p class="offset-top-50 text-left">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident ullam
+      modi aliquam ab ipsam doloribus atque fuga saepe iste beatae. <br><br> Similique ipsam fugiat sunt dolores
+      consequatur cum minus incidunt quae.</p>
+    <div class="offset-top-30 text-center">
+      <p>
+        <q class="font-italic h3 text-regular">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+          Eligendi rem nostrum, illo molestias laboriosam quaerat dolore iste distinctio deserunt earum debitis.
+          <br><br> Voluptatum in quas non aperiam, asperiores quibusdam eos aspernatur?</q>
+      </p>
+    </div>
+    <div class="offset-top-30">
+      <p class="text-left">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam iste sequi totam!
+        Dolores quam officia id. <br><br> Iure dolore modi ipsam obcaecati alias autem aperiam neque molestias
+        dolores, maxime officiis adipisci!
+      </p>
+    </div>
+    <div class="offset-top-50">
+      <!-- Linear progress bar-->
+      <div class="progress-linear" data-to="70">
+        <div class="progress-linear-header clearfix">
+          <div><span class="progress-linear-title p text-ubold pull-left text-uppercase">{Inserir texto}</span>
+          </div>
+          <div><span class="big text-ubold pull-right progress-linear-counter">70 ????</span></div>
+        </div>
+        <div class="progress-linear-body">
+          <div class="progress-linear-bar bg-success"></div>
+        </div>
+      </div>
+      <div class="offset-top-50">
+        <!-- Linear progress bar-->
+        <div class="progress-linear" data-to="54">
+          <div class="progress-linear-header clearfix">
+            <div><span class="progress-linear-title p text-ubold pull-left text-uppercase">CrossFIT
+                KKKKKKKKKKK</span></div>
+            <div><span class="big text-ubold pull-right progress-linear-counter">54</span></div>
+          </div>
+          <div class="progress-linear-body">
+            <div class="progress-linear-bar bg-info"></div>
+          </div>
+        </div>
+      </div>
+      <div class="offset-top-50">
+        <!-- Linear progress bar-->
+        <div class="progress-linear" data-to="87">
+          <div class="progress-linear-header clearfix">
+            <div><span class="progress-linear-title p text-ubold pull-left text-uppercase">YogaPUTAQUEPARIU</span>
+            </div>
+            <div><span class="big text-ubold pull-right progress-linear-counter">87</span></div>
+          </div>
+          <div class="progress-linear-body">
+            <div class="progress-linear-bar bg-warning"></div>
+          </div>
+        </div>
+      </div>
+      <div class="offset-top-50">
+        <!-- Linear progress bar-->
+        <div class="progress-linear" data-to="65">
+          <div class="progress-linear-header clearfix">
+            <div><span class="progress-linear-title p text-ubold pull-left text-uppercase">BodybuildingBIIIIIRL</span>
+            </div>
+            <div><span class="big text-ubold pull-right progress-linear-counter">65</span></div>
+          </div>
+          <div class="progress-linear-body">
+            <div class="progress-linear-bar bg-danger"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  </div>
+  </div>
+  </section>
+  <br><br>
   <!-- Offers-->
   <section class="section-bottom-66 section-xl-bottom-0"
     data-preset='{"title":"Carousel 2","category":"content, carousel","reload":true,"id":"carousel-2"}'>
@@ -238,7 +318,18 @@
       data-nav-class="[&quot;owl-prev mdi mdi-chevron-left&quot;, &quot;owl-next mdi mdi-chevron-right&quot;]">
       <div>
         <!-- Thumbnail Terry-->
-        <figure class="thumbnail-terry"><a href="#"><img width="480" height="480" src="images/about-01-480x480.jpg"
+        <figure class="thumbnail-terry"><a href="#"><img width="480" height="480" src="imgs-muscle/gym1-interior.png"
+              alt="" /></a> <!--Alterar img-->
+          <figcaption>
+            <div>
+              <h4 class="thumbnail-terry-title"></h4>
+            </div>            
+          </figcaption>
+        </figure>
+      </div>
+      <div>
+        <!-- Thumbnail Terry-->
+        <figure class="thumbnail-terry"><a href="#"><img width="480" height="480" src="imgs-muscle/gym2-interior.png"
               alt="" /></a> <!--Alterar img-->
           <figcaption>
             <div>
@@ -251,20 +342,7 @@
       </div>
       <div>
         <!-- Thumbnail Terry-->
-        <figure class="thumbnail-terry"><a href="#"><img width="480" height="480" src="images/about-02-480x480.jpg"
-              alt="" /></a> <!--Alterar img-->
-          <figcaption>
-            <div>
-              <h4 class="thumbnail-terry-title"></h4>
-            </div>
-            <p class="thumbnail-terry-desc offset-top-0"></p><a class="btn offset-top-10 offset-lg-top-0 btn-danger"
-              href="#">free first lesson</a>
-          </figcaption>
-        </figure>
-      </div>
-      <div>
-        <!-- Thumbnail Terry-->
-        <figure class="thumbnail-terry"><a href="#"><img width="480" height="480" src="images/about-03-480x480.jpg"
+        <figure class="thumbnail-terry"><a href="#"><img width="480" height="480" src="imgs-muscle/gym3-interior.png"
               alt="" /></a> <!--Alterar img-->
           <figcaption>
             <div>
@@ -345,7 +423,8 @@
                               class="mdi mdi-email novi-icon"></span></span></span>
                         <input class="form-control" placeholder="Insira seu email" type="email" name="email"
                           data-constraints="@Required @Email"><span class="input-group-append">
-                          <button class="btn btn-sm btn-danger" type="submit">Inscreva-se</button></span> <!-- Em breve -->
+                          <button class="btn btn-sm btn-danger" type="submit">Inscreva-se</button></span>
+                        <!-- Em breve -->
                       </div>
                     </div>
                     <div class="form-output" id="form-subscribe-footer"></div>
