--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <!-- RD Navbar Nav-->
                 <ul class="rd-navbar-nav">
                   <li class="active"><a href="index.html"><button class="botao">Home</button></a></li>
-                  <li><a href="equipe-muscle.html"><button class="botao">Equipe</button></a></li>
+                  <li><a class="a-nav"><a href="equipe-muscle.html"><button class="botao">Equipe</button></a></li>
                   <li><a href="parcerias.html"><button class="botao">Parcerias</button></a></li>                
                   <li><a href="about.html"><button class="botao">Sobre</button></a></li>
                 </ul>
@@ -256,7 +256,7 @@
             <div class="col-md-6 col-xl-3">
               <!-- Box Member-->
               <div class="box-member"><img class="img-fluid" src="imgs-muscle/kayo-perf.png" alt="" />
-                <h5 class="font-weight-bold offset-top-20"><a href="#about-coach.html">{Inserir Texto}</a> <small
+                <h5 class="font-weight-bold offset-top-20"><a href="equipe-muscle.html">{Inserir Texto}</a> <small
                     class="text-danger"></small>
                 </h5>
                 <div class="box-member-caption">
@@ -279,7 +279,7 @@
             <div class="col-md-6 col-xl-3 offset-top-66 offset-md-top-0 offset-xl-top-0">
               <!-- Box Member-->
               <div class="box-member"><img class="img-fluid" src="imgs-muscle/alan-perf.png" alt="" />
-                <h5 class="font-weight-bold offset-top-20"><a href="#about-coach.html">{Inserir Texto}</a> <small
+                <h5 class="font-weight-bold offset-top-20"><a href="equipe-muscle.html">{Inserir Texto}</a> <small
                     class="text-danger"></small>
                 </h5>
                 <div class="box-member-caption">
@@ -303,7 +303,7 @@
             <div class="col-md-6 col-xl-3 offset-top-66 offset-xl-top-0">
               <!-- Box Member-->
               <div class="box-member"><img class="img-fluid" src="imgs-muscle/eduardo-perf.png" alt="" />
-                <h5 class="font-weight-bold offset-top-20"><a href="#about-coach.html">{Inserir Texto}</a> <small
+                <h5 class="font-weight-bold offset-top-20"><a href="equipe-muscle.html">{Inserir Texto}</a> <small
                     class="text-danger"></small>
                 </h5>
                 <div class="box-member-caption">
@@ -328,7 +328,7 @@
             <div class="col-md-6 col-xl-3 offset-top-66 offset-xl-top-0">
               <!-- Box Member-->
               <div class="box-member"><img class="img-fluid" src="imgs-muscle/adriane-perf.png" alt="" />
-                <h5 class="font-weight-bold offset-top-20"><a href="#about-coach.html">{Profissional De Educação Física}</a><br><small
+                <h5 class="font-weight-bold offset-top-20"><a href="equipe-muscle.html">{Profissional De Educação Física}</a><br><small
                     class="text-danger"></small>
                 </h5>
                 <div class="box-member-caption">
@@ -437,7 +437,7 @@
             <div class="col-sm-10 col-md-3 offset-top-66 order-md-2 offset-md-top-0 col-md-6 col-xl-4 order-xl-4">
               <div class="inset-xl-left-20">
                 <p class="text-uppercase text-spacing-60 font-weight-bold">Novidades</p>
-                <p class="offset-top-20 text-left">
+                <p class="footer-text">
                   Mantenha se atualizado com as novidades da Muscle Factory
                 </p>
                 <div class="offset-top-30">
@@ -474,8 +474,8 @@
                   <li class="list-inline-item"><a
                       class="novi-icon icon fa fa-linkedin icon-xxs icon-circle icon-darkest-filled" href="#"></a></li>
                 </ul>
-              </div>
-              <p class="text-darker offset-top-20">Muscle Factory &copy; <span id="copyright-year"></span>
+              </div><br><br>
+              <p class="footer-text">Muscle Factory &copy; <span id="copyright-year"></span>
               </p>
             </div>
           </div>
