--- a/equipe-muscle.html
+++ b/equipe-muscle.html
@@ -107,8 +107,41 @@
         <div class="col-sm-10 col-md-5">
           <!-- Member block type 5-->
           <div class="member-block-type-5 inset-lg-right-20"><img class="img-fluid mx-auto d-block"
-              src="imgs-muscle/alan-perf.png" width="600" height="600" alt="" />
-            <div class="member-block-body"><a class="btn btn-block btn-danger" href="#">Whatsapp</a>
+              src="imgs-muscle/kayo-perf.png" width="437" height="437" alt="" />
+            <div class="member-block-body"><a class="btn btn-block btn-danger" href="#">Whatsapp</a> 
+              <div class="offset-top-34">
+                <ul class="list-inline list-inline-xs">
+                  <li class="list-inline-item"><a
+                      class="novi-icon icon icon-xxs icon-circle icon-darkest-filled fa-facebook" href="#"></a></li>                  
+                  <li class="list-inline-item"><a
+                      class="novi-icon icon icon-xxs icon-circle icon-darkest-filled fa-google-plus" href="#"></a></li>
+                  <li class="list-inline-item"><a
+                      class="novi-icon icon icon-xxs icon-circle icon-darkest-filled fa-instagram" href="#"></a></li>
+                </ul>
+              </div>
+              <address class="contact-info offset-top-20 offset-md-top-34">
+                <ul class="list-unstyled p">
+                  <li><span class="novi-icon icon icon-xxs text-middle text-dark mdi mdi-phone"></span>
+                    041 xxxxx-xxxx</a>
+                    <br><br>
+                  </li>
+                  <li><span class="novi-icon icon icon-xxs text-middle text-dark mdi mdi-email-open"></span><a
+                      class="p big text-middle d-inline-block offset-top-0 text-picton-blue"
+                      href="mailto:email@gmail.com">email@gmail.com</a></li>
+                </ul>
+              </address>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row justify-content-sm-center">
+        <div class="col-sm-10 col-md-5">
+          <!-- Member block type 5-->
+          <div class="member-block-type-5 inset-lg-right-20"><img class="img-fluid mx-auto d-block"
+              src="imgs-muscle/alan-perf.png" width="437" height="437" alt="" />
+            <div class="member-block-body"><a class="btn btn-block btn-danger" href="#">Whatsapp</a>  <!-- CREF 'Alan' 037312G/PR-->
               <div class="offset-top-34">
                 <ul class="list-inline list-inline-xs">
                   <li class="list-inline-item"><a
@@ -134,6 +167,7 @@
           </div>
         </div>
       </div>
+    </div>
       <!--Div linha horizontal -->
       <div id="linha">
       </div>
@@ -219,6 +253,82 @@
                   </ul>
                 </address>
               </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row justify-content-sm-center">
+        <div class="col-sm-10 col-md-5">
+          <!-- Member block type 5-->
+          <div class="member-block-type-5 inset-lg-right-20"><img class="img-fluid mx-auto d-block"
+              src="imgs-muscle/carina-muscle.png" width="437" height="437" alt="" />
+            <div class="member-block-body"><a class="btn btn-block btn-danger" href="" target="_blank">Whatsapp</a>
+              <div class="offset-top-34">
+                <ul class="list-inline list-inline-xs">
+                  <li class="list-inline-item"><a
+                      class="novi-icon icon icon-xxs icon-circle icon-darkest-filled fa-facebook" href="#"></a></li>
+                  <li class="list-inline-item"><a
+                      class="novi-icon icon icon-xxs icon-circle icon-darkest-filled fa-google-plus" href="#"></a>
+                  </li>
+                  <li class="list-inline-item"><a
+                      class="novi-icon icon icon-xxs icon-circle icon-darkest-filled fa-instagram" href="#"></a></li>
+                </ul>
+              </div>
+              <address class="contact-info offset-top-20 offset-md-top-34">
+                <ul class="list-unstyled p">
+                  <li><span class="novi-icon icon icon-xxs text-middle text-dark mdi mdi-phone"></span>
+                    041 xxxxx-xxxx</a>
+                  </li>
+                  <li><span class="novi-icon icon icon-xxs text-middle text-dark mdi mdi-email-open"></span><a
+                      class="p big text-middle d-inline-block offset-top-0 text-picton-blue"
+                      href="mailto:email@gmail.com">email@gmail.com</a></li>
+
+                  <!--Div linha horizontal -->
+                  <div id="linha">
+                  </div>
+                  <hr />
+                </ul>
+              </address>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row justify-content-sm-center">
+        <div class="col-sm-10 col-md-5">
+          <!-- Member block type 5-->
+          <div class="member-block-type-5 inset-lg-right-20"><img class="img-fluid mx-auto d-block"
+              src="images/about-01-480x480.jpg" width="437" height="437" alt="" />
+            <div class="member-block-body"><a class="btn btn-block btn-danger" href="" target="_blank">Whatsapp</a>
+              <div class="offset-top-34">
+                <ul class="list-inline list-inline-xs">
+                  <li class="list-inline-item"><a
+                      class="novi-icon icon icon-xxs icon-circle icon-darkest-filled fa-facebook" href="#"></a></li>
+                  <li class="list-inline-item"><a
+                      class="novi-icon icon icon-xxs icon-circle icon-darkest-filled fa-google-plus" href="#"></a>
+                  </li>
+                  <li class="list-inline-item"><a
+                      class="novi-icon icon icon-xxs icon-circle icon-darkest-filled fa-instagram" href="#"></a></li>
+                </ul>
+              </div>
+              <address class="contact-info offset-top-20 offset-md-top-34">
+                <ul class="list-unstyled p">
+                  <li><span class="novi-icon icon icon-xxs text-middle text-dark mdi mdi-phone"></span>
+                    041 xxxxx-xxxx</a>
+                  </li>
+                  <li><span class="novi-icon icon icon-xxs text-middle text-dark mdi mdi-email-open"></span><a
+                      class="p big text-middle d-inline-block offset-top-0 text-picton-blue"
+                      href="mailto:email@gmail.com">email@gmail.com</a></li>
+
+                  <!--Div linha horizontal -->
+                  <div id="linha">
+                  </div>
+                  <hr />
+                </ul>
+              </address>
             </div>
           </div>
         </div>
