--- a/about.html
+++ b/about.html
@@ -61,8 +61,7 @@
             <div class="rd-navbar-nav-wrap">
               <div class="rd-navbar-mobile-scroll">
                 <!--Navbar Brand Mobile-->
-                <div class="rd-navbar-mobile-brand"><a href="index.html"><img width='173' height='30'
-                      src='imgs-muscle/banner-muscle.png' alt='image-menu-nav' /></a></div>
+                
                 <!-- RD Navbar Nav-->
                 <ul class="rd-navbar-nav">
                   <li class="active"><a href="index.html"><button class="botao">Home</button></a></li>
@@ -96,7 +95,7 @@
   </header>
   <!-- Heading Style-->
   <div class="offset-top-50">
-    <h2>Heading h2 </h2><small class="d-block d-sm-inline text-dark">Secondary text</small>
+    <h2>{inserir texto h2}</h2><small class="d-block d-sm-inline text-dark">texto secundário</small>
     <p>
       Semper quis lectus nulla at volutpat. Volutpat est velit egestas dui id. Cras ornare arcu dui vivamus.
       Faucibus et molestie ac feugiat.
@@ -109,7 +108,7 @@
     </p>
   </div>
   <div class="offset-top-50">
-    <h3>Heading h3 </h3><small class="d-block d-sm-inline text-dark">Secondary text</small>
+    <h3>{inserir texto h3} </h3><small class="d-block d-sm-inline text-dark">texto secundário</small>
     <p>
       Sagittis id consectetur purus ut faucibus pulvinar elementum. Purus in mollis nunc sed id semper risus.
       Vitae congue eu consequat ac felis donec et.
@@ -122,7 +121,7 @@
     </p>
   </div>
   <div class="offset-top-50">
-    <h4>Heading h4 </h4><small class="d-block d-sm-inline text-dark">Secondary text</small>
+    <h4>{inserir texto h4} </h4><small class="d-block d-sm-inline text-dark">texto secundario</small>
     <p>
       Imperdiet nulla malesuada pellentesque elit eget gravida cum. Tortor pretium viverra suspendisse potenti
       nullam ac tortor vitae purus. Senectus et netus et malesuada fames ac. Vestibulum lorem sed risus
@@ -130,22 +129,7 @@
 
     </p>
   </div>
-  <div class="offset-top-50">
-    <h5>Heading h5 </h5><small class="d-block d-sm-inline text-dark">Secondary text</small>
-    <p>
-      Augue ut lectus arcu bibendum at varius. Elit eget gravida cum sociis natoque. Potenti nullam ac tortor
-      vitae purus. Eu tincidunt tortor aliquam nulla. Morbi tristique senectus et netus et malesuada fames. Enim
-      blandit volutpat maecenas volutpat blandit aliquam.
-
-    </p>
-  </div>
-  <div class="offset-top-50">
-    <h6>Heading 6 </h6><small class="d-block d-sm-inline text-dark">Secondary text</small>
-    <p>Nunc pulvinar sapien et ligula ullamcorper malesuada proin. Mauris sit amet massa vitae tortor
-      condimentum lacinia. Pellentesque elit eget gravida cum sociis natoque penatibus. Amet risus nullam eget
-      felis eget nunc lobortis. Sed odio morbi quis commodo odio aenean sed adipiscing.</p>
-  </div>
-  </div>
+  
   <section data-preset='{"title":"Carousel 1","category":"content, carousel","reload":true,"id":"carousel-1"}'>
     <div class="owl-carousel owl-carousel-default d-lg-none-owl-dots veil-owl-nav d-lg-owl-nav" data-items="1"
       data-sm-items="2" data-lg-items="3" data-xl-items="4" data-nav="true" data-dots="true"
@@ -215,63 +199,7 @@
     </div>
   </section>
   <!-- Text Alignment-->
-  <section class="section novi-background section-66">
-    <div class="container">
-      <h2>Inserir Titulo</h2>
-      <hr class="divider divider-md bg-red">
-      <h3 class="text-center offset-md-top-66">Texto central</h3>
-      <p class="text-center">{inserir texto}</p>
-      <p class="text-left">{inserir texto}</p>
-      <p class="text-right">
-        {inserir texto}
-      </p>
-    </div>
-  </section>
-  <!-- Text Formatting-->
-  <section class="section novi-background section-66">
-    <div class="container">
-      <h2>Text Formatting</h2>
-      <hr class="divider divider-md bg-red">
-      <p class="offset-top-66">This is normal text</p>
-      <p class="text-light">This is light text</p>
-      <p class="txt-bold">This is bold text</p>
-      <p><em>This is emphasized text</em></p>
-      <p class="font-italic">This is italic text</p>
-      <p class="big">This is big text</p>
-      <p><small>This is small text</small></p>
-      <p><strong>This is strong text</strong></p>
-      <p>This is<sub> subscript </sub>and<sup> superscript </sup> text</p>
-      <p><ins>This is text inserted to the document</ins></p>
-      <p>
-        <del>This is text deleted from the document</del>
-      </p>
-      <p><code>This is code text</code></p>
-      <p>
-        <mark>This is hightlighted text</mark>
-      </p>
-    </div>
-  </section>
-  <!-- Text Helper Classes-->
-  <section class="section novi-background section-66">
-    <div class="container">
-      <h2>Text Helper Classes</h2>
-      <hr class="divider divider-md bg-red">
-      <p class="text-muted offset-top-66">This is muted text</p>
-      <p class="text-success">This is success text</p>
-      <p class="text-warning">This is warning text</p>
-      <p class="text-danger">This is danger text</p>
-      <p class="text-info">This is info text</p>
-      <p class="text-primary">This is primary text</p>
-      <p class="text-deluge">This is deluge text</p>
-      <p class="text-picton">This is picton text</p>
-      <p><span class="text-mantis">This is primary empasized text</span></p>
-      <p><span class="text-blue-gray">This is deluge empasized text</span></p>
-      <p><span class="text-malibu-2">This is picton empasized text</span></p>
-      <p class="text-uppercase">This text is uppercased</p>
-      <p class="text-capitalize">This text is capitalized</p>
-      <p class="text-lowercase">This text is lowercased</p>
-    </div>
-  </section>
+  
   <!-- Image Floating-->
   <section class="section novi-background section-66">
     <div class="container">
@@ -280,7 +208,7 @@
       <div class="row row-30 offset-top-66">
         <div class="col-md-5"><img class="img-fluid" src="images/portfolio-16-370x280.jpg" alt=""></div>
         <div class="col-md-7 text-left">
-          <h3>This image is left</h3>
+          <h3>Imagem lado esquerdo</h3>
           <p>Imperdiet nulla malesuada pellentesque elit eget gravida cum. Tortor pretium viverra suspendisse potenti
             nullam ac tortor vitae purus. Senectus et netus et malesuada fames ac. Vestibulum lorem sed risus ultricies.
             Morbi blandit cursus risus at ultrices mi. Augue ut lectus arcu bibendum at varius. Elit eget gravida cum
@@ -290,7 +218,7 @@
       </div>
       <div class="row row-30 offset-top-50">
         <div class="col-md-7 text-left text-md-right">
-          <h3>This image is right floated</h3>
+          <h3>imagem lado direito floated</h3>
           <p>
             Enim blandit volutpat maecenas volutpat blandit aliquam. Nunc pulvinar sapien et ligula ullamcorper
             malesuada proin. Mauris sit amet massa vitae tortor condimentum lacinia. Pellentesque elit eget gravida cum
@@ -304,28 +232,7 @@
       </div>
     </div>
   </section>
-  <!-- Text Dropcaps-->
-  <section class="section novi-background section-66 section-md-bottom-110">
-    <div class="container">
-      <h2>Text Dropcaps</h2>
-      <hr class="divider divider-md bg-red">
-      <p class="offset-top-50 dropcap dropcap-dark text-left">
-        At tellus at urna condimentum mattis pellentesque id nibh tortor. Ullamcorper dignissim cras tincidunt lobortis
-        feugiat. Morbi tincidunt augue interdum velit euismod. Purus ut faucibus pulvinar elementum integer enim neque
-        volutpat. Eget nunc lobortis mattis aliquam faucibus purus in massa. Quis blandit turpis cursus in hac habitasse
-        platea dictumst quisque. Morbi tempus iaculis urna id volutpat lacus laoreet non curabitur. Habitasse platea
-        dictumst vestibulum rhoncus est pellentesque elit ullamcorper dignissim. Rhoncus dolor purus non enim praesent
-        elementum.
-
-
-      </p>
-    </div>
-  </section><a class="section section-banner"
-    href="https://www.templatemonster.com/intense-multipurpose-html-template.html"
-    style="background-image: url(images/banner/background-03-1920x310.jpg); background-image: -webkit-image-set( url(images/banner/background-03-1920x310.jpg) 1x, url(images/banner/background-03-3840x620.jpg) 2x )"><img
-      src="images/banner/foreground-03-1600x310.png"
-      srcset="images/banner/foreground-03-1600x310.png 1x, images/banner/foreground-03-3200x620.png 2x" alt=""
-      width="1600" height="310"></a>
+ 
   <!-- Page Footer-->
   <footer
     class="section-relative section-top-66 section-bottom-34 page-footer bg-gray-base context-dark novi-background"
