--- a/parcerias.html
+++ b/parcerias.html
@@ -79,8 +79,7 @@
             <div class="rd-navbar-nav-wrap">
               <div class="rd-navbar-mobile-scroll">
                 <!--Navbar Brand Mobile-->
-                <div class="rd-navbar-mobile-brand"><a href="index.html"><img width='173' height='30'
-                      src='imgs-muscle/banner-muscle.png' alt='image-menu-nav' /></a></div> <!--Alterar essa img-->
+                
                 <!-- RD Navbar Nav-->
                 <ul class="rd-navbar-nav">
                   <li class="active"><a href="index.html"><button class="botao">Home</button></a></li>
@@ -112,96 +111,9 @@
     </section>
     </div>
   </header>
-  <section class="section-110 text-xl-left novi-background"
-    data-preset='{"title":"Contact form","category":"content, form","reload":true,"id":"form"}'>
-    <div class="container">
-      <div class="row justify-content-sm-center justify-content-sm-center">
-        <div class="col-xl-4">
-          <div class="inset-xl-right-80">
-            <h3 class="font-weight-bold">How to Find us</h3>
-            <hr class="divider hr-xl-left-0 bg-red">
-            <p class="offset-top-41 offset-xl-top-50">We are located in the city center and it's easy to reach us with
-              any kind of public transport. Use our map to find the nearest gym.</p>
-            <address class="contact-info offset-top-30 offset-xl-top-50">
-              <div class="h6 text-uppercase font-weight-bold text-danger letter-space-none offset-top-none">Cambridge
-              </div>
-              <p>9863 - 9867 MILL ROAD, CAMBRIDGE, MG09 99HT.</p>
-              <dl class="offset-top-0">
-                <dt>Telephone</dt>
-                <dd><a href="tel:#">+1 800 603 6035</a></dd>
-              </dl>
-              <dl>
-                <dt>E-mail:</dt>
-                <dd><a href="mailto:#">mail@demolink.org</a></dd>
-              </dl>
-            </address>
-            <address class="contact-info offset-top-30 offset-xl-top-50">
-              <div class="h6 text-uppercase font-weight-bold text-danger letter-space-none">Glasgow</div>
-              <p>9870 ST VINCENT PLACE, GLASGOW, DC 45 FR 45.</p>
-              <dl class="offset-top-0">
-                <dt>Telephone</dt>
-                <dd><a href="tel:#">+1 800 559 6580</a></dd>
-              </dl>
-              <dl>
-                <dt>E-mail:</dt>
-                <dd><a href="mailto:#">mail@demolink.org</a></dd>
-              </dl>
-            </address>
-          </div>
-        </div>
-        <div class="col-md-8 offset-top-66 offset-xl-top-0">
-          <h3 class="font-weight-bold">Get in touch</h3>
-          <hr class="divider hr-xl-left-0 bg-red">
-          <!-- RD Mailform-->
-          <form class="rd-mailform text-left offset-top-50" data-form-output="form-output-global"
-            data-form-type="contact" method="post" action="">
-            <div class="row novi-excluded">
-              <div class="col-xl-6">
-                <div class="form-group">
-                  <label class="form-label form-label-outside" for="contact-us-name">Name:</label>
-                  <input class="form-control" id="contact-us-name" type="text" name="name" data-constraints="@Required">
-                </div>
-              </div>
-              <div class="col-xl-6 offset-top-20 offset-xl-top-0">
-                <div class="form-group">
-                  <label class="form-label form-label-outside" for="contact-us-email">E-Mail:</label>
-                  <input class="form-control" id="contact-us-email" type="email" name="email"
-                    data-constraints="@Required @Email">
-                </div>
-              </div>
-              <div class="col-xl-12 offset-top-20">
-                <div class="form-group">
-                  <label class="form-label form-label-outside" for="contact-us-message">Message:</label>
-                  <textarea class="form-control" id="contact-us-message" name="message"
-                    data-constraints="@Required"></textarea>
-                </div>
-              </div>
-            </div>
-            <div class="group-sm text-center text-xl-left offset-top-30">
-              <button class="btn btn-danger" type="submit">Send</button>
-              <button class="btn btn-default" type="reset">Reset</button>
-            </div>
-          </form>
-        </div>
-      </div>
-    </div>
-  </section>
-  <section data-preset='{"title":"Map","category":"content, map","reload":true,"id":"map"}'>
-    <div class="google-map-container" data-zoom="5" data-center="9870 St Vincent Place, Glasgow, DC 45 Fr 45."
-      data-styles="[{&quot;featureType&quot;:&quot;landscape&quot;,&quot;stylers&quot;:[{&quot;saturation&quot;:-100},{&quot;lightness&quot;:60}]},{&quot;featureType&quot;:&quot;road.local&quot;,&quot;stylers&quot;:[{&quot;saturation&quot;:-100},{&quot;lightness&quot;:40},{&quot;visibility&quot;:&quot;on&quot;}]},{&quot;featureType&quot;:&quot;transit&quot;,&quot;stylers&quot;:[{&quot;saturation&quot;:-100},{&quot;visibility&quot;:&quot;simplified&quot;}]},{&quot;featureType&quot;:&quot;administrative.province&quot;,&quot;stylers&quot;:[{&quot;visibility&quot;:&quot;off&quot;}]},{&quot;featureType&quot;:&quot;water&quot;,&quot;stylers&quot;:[{&quot;visibility&quot;:&quot;on&quot;},{&quot;lightness&quot;:30}]},{&quot;featureType&quot;:&quot;road.highway&quot;,&quot;elementType&quot;:&quot;geometry.fill&quot;,&quot;stylers&quot;:[{&quot;color&quot;:&quot;#ef8c25&quot;},{&quot;lightness&quot;:40}]},{&quot;featureType&quot;:&quot;road.highway&quot;,&quot;elementType&quot;:&quot;geometry.stroke&quot;,&quot;stylers&quot;:[{&quot;visibility&quot;:&quot;off&quot;}]},{&quot;featureType&quot;:&quot;poi.park&quot;,&quot;elementType&quot;:&quot;geometry.fill&quot;,&quot;stylers&quot;:[{&quot;color&quot;:&quot;#b6c54c&quot;},{&quot;lightness&quot;:40},{&quot;saturation&quot;:-40}]},{}]"
-      data-icon="images/gmap_marker.png" data-icon-active="images/gmap_marker_active.png">
-      <div class="google-map"></div>
-      <ul class="google-map-markers">
-        <li data-location="9870 St Vincent Place, Glasgow, DC 45 Fr 45."
-          data-description="9870 St Vincent Place, Glasgow"></li>
-      </ul>
-    </div>
-  </section><a class="section section-banner"
-    href="https://www.templatemonster.com/intense-multipurpose-html-template.html"
-    style="background-image: url(images/banner/background-03-1920x310.jpg); background-image: -webkit-image-set( url(images/banner/background-03-1920x310.jpg) 1x, url(images/banner/background-03-3840x620.jpg) 2x )"><img
-      src="images/banner/foreground-03-1600x310.png"
-      srcset="images/banner/foreground-03-1600x310.png 1x, images/banner/foreground-03-3200x620.png 2x" alt=""
-      width="1600" height="310"></a>
+  <!-- section -->
+
+  
   <!-- Page Footer-->
   <footer
     class="section-relative section-top-66 section-bottom-34 page-footer bg-gray-base context-dark novi-background"
